--- a/video-server/src/main/resources/application.yml
+++ b/video-server/src/main/resources/application.yml
@@ -7,10 +7,12 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
-
 #服务名
 spring:
   application:
     name: video-server
+  zipkin:
+    base-url: http://47.94.9.39:9411/
+
 
 
